--- a/envs/2022-2.0-py39-tiled-env.yml
+++ b/envs/2022-2.0-py39-tiled-env.yml
@@ -14,7 +14,7 @@ dependencies:
   - arvpyf
   - attrs >=18.0
   - black
-  - bluesky >=1.8.2
+  - bluesky >=1.8.3
   - bluesky-kafka >=0.9.0  # [not win]
   - bluesky-live >=0.0.8
   - bluesky-queueserver
@@ -137,7 +137,7 @@ dependencies:
   # - xmidas >=0.1.1
   - xpdan >=0.8.2
   - xray-vision >=0.1.1
-  - xraylarch
+  - xraylarch >=0.9.58
   - zbar  # dependency of pyzbar
   # Simulation packages:
   - oscars
