--- a/configs/nsls2-collection-py37-tiled.yml
+++ b/configs/nsls2-collection-py37-tiled.yml
@@ -11,6 +11,7 @@ channels: "-c conda-forge"
 #extra_cmd_before_install: "yum install mesa-libGL mesa-libGL-devel -y"
 extra_cmd_before_install: "yum install mesa-libGL -y"
 extra_cmd_after_install: "conda remove perl --force -y"
+extra_cmd_after_install: "pip install tiled==0.1.0a60 databroker==2.0.0b1; conda list"
 docker_upload:
   - ghcr
   - dockerhub
