--- a/envs/2022-2.0-py39-tiled-env.yml
+++ b/envs/2022-2.0-py39-tiled-env.yml
@@ -135,7 +135,7 @@ dependencies:
   # - xmidas >=0.1.1
   - xpdan >=0.8.2
   - xray-vision >=0.1.1
-  - xraylarch >=0.9.58
+  - xraylarch
   - zbar  # dependency of pyzbar
   # Simulation packages:
   - oscars
