--- a/envs/2022-2.0-py39-tiled-env.yml
+++ b/envs/2022-2.0-py39-tiled-env.yml
@@ -109,7 +109,7 @@ dependencies:
   - scikit-beam >=0.0.24
   - scikit-learn
   - scipy
-  - silx >=0.15.2
+  - silx
   - sixtools
   - slackclient
   - smi-analysis
@@ -135,7 +135,7 @@ dependencies:
   # - xmidas >=0.1.1
   - xpdan >=0.8.2
   - xray-vision >=0.1.1
-  - xraylarch
+  - xraylarch >=0.9.58
   - zbar  # dependency of pyzbar
   # Simulation packages:
   - oscars
