--- a/envs/2022-2.0-py37-tiled-env.yml
+++ b/envs/2022-2.0-py37-tiled-env.yml
@@ -17,6 +17,7 @@ dependencies:
   - bluesky >=1.8.3
   - bluesky-kafka >=0.9.0  # [not win]
   - bluesky-live >=0.0.8
+  - bluesky-queueserver
   - bluesky-queueserver-api
   - bluesky-widgets >=0.0.10
   - boto3
