--- a/configs/nsls2-collection-py37-tiled.yml
+++ b/configs/nsls2-collection-py37-tiled.yml
@@ -1,6 +1,6 @@
 docker_image: "nsls2/linux-anvil-cos7-x86_64:latest"
-env_name: "2022-2.0-py37-tiled"
-conda_env_file: "2022-2.0-py37-tiled-env.yml"
+env_name: "2022-2.1-py37-tiled"
+conda_env_file: "2022-2.1-py37-tiled-env.yml"
 conda_binary: "mamba"
 python_version: "3.7"
 pkg_name: ""
@@ -10,7 +10,7 @@ extra_packages: "tmate mamba"
 channels: "-c conda-forge"
 #extra_cmd_before_install: "yum install mesa-libGL mesa-libGL-devel -y"
 extra_cmd_before_install: "yum install mesa-libGL -y"
-extra_cmd_after_install: "pip install tiled[all]==0.1.0a60 databroker[all]==2.0.0b1; conda remove perl --force -y"
+extra_cmd_after_install: "conda remove perl --force -y"
 docker_upload:
   - ghcr
   - dockerhub
@@ -21,7 +21,7 @@ zenodo_metadata:
     title: "NSLS-II collection conda environment"
     upload_type: "software"
     description: "NSLS-II collection conda environment"
-    version: 2022-2.0
+    version: 2022-2.1
     creators:
       - name: Rakitin, Maksim
         affiliation: "Brookhaven National Laboratory"
