--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,7 +2,7 @@ name: package_env
 
 on:
   push:
-  pull_request:
+  # pull_request:
 
 jobs:
   generate_conda_packd_envs:
@@ -12,6 +12,8 @@ jobs:
       matrix:
         python-version: ["3.7", "3.9"]
       fail-fast: false
+    env:
+      TZ: America/New_York
 
     steps:
       - name: Set env.REPOSITORY_NAME  # just the repo, as opposed to org/repo
@@ -98,7 +100,9 @@ jobs:
           ls -laF artifacts/
 
           # Print the contents of the env .yml file to the terminal
+          echo "::group::env .yml file content"
           cat artifacts/*.yml
+          echo "::endgroup::"
 
           # Print the checksums to the terminal
           cat artifacts/*sum.txt
@@ -113,7 +117,8 @@ jobs:
 
       # https://github.com/actions/upload-artifact
       - name: upload artifacts
-        if: github.ref != 'refs/heads/main'
+        if: |
+          github.ref != 'refs/heads/main'
         uses: actions/upload-artifact@v2
         with:
           name: test-nsls2-collection-py${{ matrix.python-version }}-tiled-${{ env.DATETIME_STRING }}
@@ -122,7 +127,8 @@ jobs:
 
       # https://github.com/actions/upload-artifact
       - name: upload artifacts
-        if: github.ref == 'refs/heads/main'
+        if: |
+          github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v2
         with:
           name: nsls2-collection-py${{ matrix.python-version }}-tiled
