--- a/envs/env-py38.yml
+++ b/envs/env-py38.yml
@@ -18,8 +18,7 @@ dependencies:
   - bluesky-kafka >=0.9.0  # [not win]
   - bluesky-live >=0.0.8
   - bluesky-queueserver
-  # TODO: sort out conflicts with bluesky-queueserver-api
-  # - bluesky-queueserver-api
+  - bluesky-queueserver-api
   - bluesky-widgets >=0.0.10
   - boto3
   - chxtools
@@ -132,8 +131,7 @@ dependencies:
   - tzlocal !=3.0
   - xlrd
   - xlwt
-  # NOTE: xmidas depends on silx==0.15.2, while xraylarch>=0.9.58 requires silx>=1.
-  # - xmidas >=0.1.1
+  - xmidas >=0.1.2
   - xpdan >=0.8.2
   - xray-vision >=0.1.1
   - xraylarch >=0.9.58
@@ -178,5 +176,6 @@ dependencies:
   #              Workaround while we wait for tiled conda package             #
   #                                                                           #
   #***************************************************************************#
+  - pip
   - pip:
     - tiled[all]
