Install `bluesky-queueserver-api` from PyPI for Python 3.9

--- a/envs/env-py39.yml
+++ b/envs/env-py39.yml
@@ -179,4 +179,5 @@ dependencies:
   #***************************************************************************#
   - pip
   - pip:
+    - bluesky-queueserver-api
     - tiled[all]
