--- a/envs/env-py38.yml
+++ b/envs/env-py38.yml
@@ -1,4 +1,4 @@
-name: 2022-2.2-py38-tiled
+name: 2022-2.3-py38-tiled
 channels:
   - conda-forge
 dependencies:
@@ -26,7 +26,7 @@ dependencies:
   - conda-pack
   - csxtools
   - dask
-  - databroker >=2.0.0b2
+  - databroker >=2.0.0b2=*_1
   - dictdiffer
   - distributed
   - doi2bib
@@ -47,7 +47,6 @@ dependencies:
   - igor
   - imageio <2.16.2
   - inflection
-  - intake <=0.6.4
   - ipykernel
   - ipympl >=0.1.1
   - ipython >=7.20.0
