--- a/envs/env-py38.yml
+++ b/envs/env-py38.yml
@@ -1,4 +1,4 @@
-name: 2022-2.3-py38-tiled
+name: 2022-2.4-py38-tiled
 channels:
   - conda-forge
 dependencies:
@@ -120,7 +120,7 @@ dependencies:
   - suitcase-mongo
   - suitcase-msgpack
   - suitcase-specfile
-  - suitcase-tiff
+  - suitcase-tiff >=0.4.0
   - suitcase-utils
   - sympy
   - toml
