--- a/envs/env-py39.yml
+++ b/envs/env-py39.yml
@@ -1,4 +1,4 @@
-name: 2022-2.3-py39-tiled
+name: 2022-2.4-py39-tiled
 channels:
   - conda-forge
 dependencies:
@@ -121,7 +121,7 @@ dependencies:
   - suitcase-mongo
   - suitcase-msgpack
   - suitcase-specfile
-  - suitcase-tiff
+  - suitcase-tiff >=0.4.0
   - suitcase-utils
   - sympy
   - toml
