--- a/envs/env-py39.yml
+++ b/envs/env-py39.yml
@@ -10,7 +10,7 @@ dependencies:
   - python >=3.9,<3.10
   - amostra <=1.0
   - ansiwrap
-  - area-detector-handlers <=0.0.9
+  - area-detector-handlers >=0.0.9
   - arvpyf
   - attrs >=18.0
   - black
