--- a/envs/env-py38.yml
+++ b/envs/env-py38.yml
@@ -1,4 +1,4 @@
-name: 2022-2.4-py38-tiled
+name: 2022-3.0-py38-tiled
 channels:
   - conda-forge
 dependencies:
@@ -14,10 +14,10 @@ dependencies:
   - arvpyf
   - attrs >=18.0
   - black
-  - bluesky >=1.8.3
-  - bluesky-kafka >=0.9.0  # [not win]
+  - bluesky >=1.9.0
+  - bluesky-kafka >=0.9.1  # [not win]
   - bluesky-live >=0.0.8
-  - bluesky-queueserver
+  - bluesky-queueserver >=0.0.16
   - bluesky-queueserver-api
   - bluesky-widgets >=0.0.10
   - boto3
@@ -33,7 +33,7 @@ dependencies:
   - dpcmaps
   # - edrixs
   - eiger-io
-  - event-model >=1.17.2
+  - event-model >=1.18.0
   - fabio
   - ffmpeg >=4.0
   - flake8
@@ -65,23 +65,22 @@ dependencies:
   - memory_profiler
   - mendeleev
   - modestimage
-  - mxtools >=0.0.2
+  - mxtools >=0.0.6
   - napari >=0.4.11
   - natsort
   - netcdf4
   - nexpy >=0.14.1
   - nodejs
   - nsls2-detector-handlers >=0.0.2
-  - nslsii >=0.4.0
+  - nslsii >=0.7.0
   - numexpr
   - numpy >=1.14.0
-  - nyxtools >=0.0.3
+  - nyxtools >=0.0.10
   - oct2py
   - opencv
   - openpyxl
-  - ophyd >=1.6.4
+  - ophyd >=1.7.0
   - papermill
-  - pdfstream
   - peakutils
   - periodictable
   - photutils
@@ -123,6 +122,7 @@ dependencies:
   - suitcase-tiff >=0.4.0
   - suitcase-utils
   - sympy
+  - tiled >=0.1.0a70
   - toml
   - tomopy >=1.11
   - tornado
@@ -162,7 +162,6 @@ dependencies:
   - hklpy  # [linux]
   - hxnfly >=0.0.10
   - ppmac
-  - xpdacq
   # Debugging tools:
   - hunter
   - logging_tree
@@ -170,11 +169,4 @@ dependencies:
   - line_profiler
   - pyinstrument
   - pyperformance
-  #***************************************************************************#
-  #                                                                           #
-  #              Workaround while we wait for tiled conda package             #
-  #                                                                           #
-  #***************************************************************************#
   - pip
-  - pip:
-    - tiled[all]
