comment out xpdacq and pdfstream because they don't work with databroker-tiled

--- a/envs/env-py39.yml
+++ b/envs/env-py39.yml
@@ -82,7 +82,7 @@ dependencies:
   - openpyxl
   - ophyd >=1.7.0
   - papermill
-  - pdfstream
+  # - pdfstream
   - peakutils
   - periodictable
   - photutils
@@ -164,7 +164,7 @@ dependencies:
   - hklpy  # [linux]
   - hxnfly >=0.0.10
   - ppmac
-  - xpdacq
+  # - xpdacq
   # Debugging tools:
   - hunter
   - logging_tree
