--- a/envs/env-py39.yml
+++ b/envs/env-py39.yml
@@ -1,4 +1,4 @@
-name: 2022-3.1-py39-tiled
+name: 2022-3.2-py39-tiled
 channels:
   - conda-forge
 dependencies:
@@ -27,12 +27,12 @@ dependencies:
   - conda-pack
   - csxtools
   - dask
-  - databroker >=2.0.0b8=*_1
+  - databroker >=2.0.0b11=*_0
   - dictdiffer
   - distributed
   - doi2bib
   - dpcmaps
-  # - edrixs
+  - edrixs
   - eiger-io
   - event-model >=1.18.0
   - fabio
@@ -82,7 +82,7 @@ dependencies:
   - openpyxl
   - ophyd >=1.7.0
   - papermill
-  # - pdfstream
+  - pdfstream >=0.6.1
   - peakutils
   - periodictable
   - photutils
@@ -124,7 +124,7 @@ dependencies:
   - suitcase-tiff >=0.4.0
   - suitcase-utils
   - sympy
-  - tiled >=0.1.0a70
+  - tiled >=0.1.0a75
   - toml
   - tomopy >=1.11
   - tornado
@@ -139,8 +139,7 @@ dependencies:
   - zbar  # dependency of pyzbar
   # Simulation packages:
   - oscars
-  # NOTE: shadow3 causes conflict issues with scipy>=1.8.
-  # - shadow3
+  - shadow3
   - srwpy
   - xrt
   #***************************************************************************#
@@ -164,7 +163,7 @@ dependencies:
   - hklpy  # [linux]
   - hxnfly >=0.0.10
   - ppmac
-  # - xpdacq
+  - xpdacq >=1.1.2
   # Debugging tools:
   - hunter
   - logging_tree
