--- a/configs/config-py310.yml
+++ b/configs/config-py310.yml
@@ -1,14 +1,12 @@
 docker_image: "nsls2/linux-anvil-cos7-x86_64:latest"
-env_name: "2022-3.2-py310-tiled"
+env_name: "2023-1.0-py310-tiled"
 conda_env_file: "env-py310.yml"
 conda_binary: "mamba"
 python_version: "3.10"
 pkg_name: ""
 pkg_version: ""
-# extra_packages: "nsls2-collection=2021C2.0=*_0 tmate mamba"
-extra_packages: "tmate mamba"
+extra_packages: "mamba"
 channels: "-c conda-forge"
-#extra_cmd_before_install: "yum install mesa-libGL mesa-libGL-devel -y"
 extra_cmd_before_install: "yum install mesa-libGL -y"
 extra_cmd_after_install: "conda remove perl --force -y"
 docker_upload:
@@ -21,7 +19,7 @@ zenodo_metadata:
     title: "NSLS-II collection conda environment"
     upload_type: "software"
     description: "NSLS-II collection conda environment"
-    version: 2022-3.2-tiled
+    version: 2023-1.0-tiled
     creators:
       - name: Rakitin, Maksim
         affiliation: "Brookhaven National Laboratory"
