Sync packages with `nsls2-collection` (`pymca`, `pymcr`, `gpytorch`, `pytorch`)

--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -93,6 +93,8 @@ dependencies:
   - pyepics >=3.4.2
   - pyfai
   - pyfftw
+  - pymca
+  - pymcr
   - pymongo >=3.7
   - pypdf2
   - pyqt >=5.12.0
@@ -169,3 +171,6 @@ dependencies:
   - line_profiler
   - pyinstrument
   - pyperformance
+  # ML:
+  - gpytorch
+  - pytorch
