--- a/envs/env-py39.yml
+++ b/envs/env-py39.yml
@@ -1,4 +1,4 @@
-name: 2023-1.2-py39-tiled
+name: 2023-1.3-py39-tiled
 channels:
   - conda-forge
 dependencies:
@@ -25,6 +25,8 @@ dependencies:
   - cmasher
   - conda-pack
   - csxtools >=0.1.18
+  - dash
+  - dash-bootstrap-components
   - dask
   - databroker >=2.0.0b15=*_0
   - dictdiffer
