--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -1,4 +1,4 @@
-name: 2023-1.3-py310-tiled
+name: 2023-1.4-py310-tiled
 channels:
   - conda-forge
 dependencies:
@@ -181,4 +181,4 @@ dependencies:
   - botorch
   - gpytorch
   - ortools-python
-  - pytorch
+  - pytorch *=cuda112*
