--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -1,4 +1,4 @@
-name: 2023-1.3-py310-tiled
+name: 2023-2.0-py310-tiled
 channels:
   - conda-forge
 dependencies:
@@ -28,14 +28,14 @@ dependencies:
   - dash
   - dash-bootstrap-components
   - dask
-  - databroker >=2.0.0b15=*_0
+  - databroker >=2.0.0b22=*_0
   - dictdiffer
   - distributed
   - doi2bib
   - dpcmaps
   - edrixs
   - eiger-io
-  - event-model >=1.19.1
+  - event-model >=1.19.2
   - fabio
   - ffmpeg >=4.0
   - flake8
@@ -47,7 +47,7 @@ dependencies:
   - hdf5-external-filter-plugins-lz4
   - hxntools >=0.6.1
   - igor
-  - imageio <2.16.2
+  - imageio
   - inflection
   - ipykernel
   - ipympl >=0.1.1
@@ -133,7 +133,7 @@ dependencies:
   - sympy
   - tiled >=0.1.0a91
   - toml
-  - tomopy >=1.12.2
+  - tomopy >=1.14.0
   - tornado
   - tqdm
   - tzlocal !=3.0
