Add deps not available in conda-forge.

--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -169,6 +169,9 @@ dependencies:
   - sirepo-bluesky >=0.6.2
   - xrt
   - zict <3.0.0
+  - pip:
+    - mimesis
+    - pyhyperscattering[all]
   #***************************************************************************#
   #                                                                           #
   #            Dependencies from the `nsls2-collection` metapackage           #
