--- a/configs/config-py310.yml
+++ b/configs/config-py310.yml
@@ -1,5 +1,5 @@
 docker_image: "quay.io/condaforge/linux-anvil-cos7-x86_64:latest"
-env_name: "2023-3.1-py310-tiled"
+env_name: "2023-3.2-py310-tiled"
 conda_env_file: "env-py310.yml"
 conda_binary: "mamba"
 python_version: "3.10"
@@ -19,9 +19,9 @@ zenodo_metadata:
     title: "NSLS-II collection conda environment"
     upload_type: "software"
     description: "NSLS-II collection conda environment"
-    version: 2023-3.1-tiled
+    version: 2023-3.2-tiled
     creators:
-      - name: Rakitin, Maksim
+      - name: Rakitin, Max
         affiliation: "Brookhaven National Laboratory"
       - name: Bischof, Garrett
         affiliation: "Brookhaven National Laboratory"
