CI: try another run without a check for unbound vars

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -79,7 +79,7 @@ jobs:
       - name: render config
         run: |
           # For reference: https://www.gnu.org/software/bash/manual/html_node/The-Set-Builtin.html.
-          set -vxeuo pipefail
+          set -vxeo pipefail
 
           env_name=$(cat configs/config-py${PYTHONVER}.yml | shyaml get-value env_name)
           export CONDA_PACK_ENV_NAME="${env_name}"
