add nvidia channel to get cuda-cudart

--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -2,6 +2,7 @@ name: 2023-3.3-py310-tiled
 channels:
   - conda-forge
   - pytorch
+  - nvidia
 dependencies:
   #***************************************************************************#
   #                                                                           #
