--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -2,6 +2,7 @@ name: 2023-3.3-py311-tiled
 channels:
   - conda-forge
   - pytorch
+  - nvidia
 dependencies:
   #***************************************************************************#
   #                                                                           #
