--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -1,4 +1,4 @@
-name: 2023-3.3-py311-tiled
+name: 2024-1.0-py311-tiled
 channels:
   - conda-forge
 dependencies:
@@ -26,6 +26,7 @@ dependencies:
   - bokeh
   - boto3
   - bottleneck
+  - broh5
   - chxtools
   - cmasher
   - conda-pack
@@ -37,7 +38,7 @@ dependencies:
   - dask-jobqueue
   - dask-ml
   - dask-xgboost
-  - databroker >=2.0.0b31
+  - databroker >=2.0.0b33
   - dictdiffer
   - discorpy
   - distributed
@@ -71,6 +72,7 @@ dependencies:
   - jedi
   - jupyter
   - jupyterlab
+  - ldap3
   - legacy-suitcase
   - lixtools
   - lmfit
@@ -128,6 +130,7 @@ dependencies:
   - pyxrf >=1.0.24
   - pyzbar
   - qt >=5.15.0
+  - redis-dict
   - redis-py
   - reportlab
   - requests
@@ -150,7 +153,7 @@ dependencies:
   - suitcase-tiff >=0.4.0
   - suitcase-utils
   - sympy
-  - tiled >=0.1.0a109
+  - tiled >=0.1.0a113
   - toml
   - tomopy >=1.12.2
   - tornado
