--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -56,6 +56,7 @@ dependencies:
   - h5py !=3.4
   - hdf5-external-filter-plugins-bitshuffle
   - hdf5-external-filter-plugins-lz4
+  - hextools
   - historydict
   - hvplot
   - hxntools >=0.6.1
