Re-enable py310 build; min pin for `prefect` is 2.14

--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -111,7 +111,7 @@ dependencies:
   - pillow
   - pocl  # needed by pyopencl, used by the `xrt` package
   - pre-commit
-  - prefect
+  - prefect >=2.14
   - py-xgboost
   - py4xs
   - pycentroids
