--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -56,7 +56,7 @@ dependencies:
   - h5py !=3.4
   - hdf5-external-filter-plugins-bitshuffle
   - hdf5-external-filter-plugins-lz4
-  - hextools
+  - hextools >=0.1.1
   - historydict
   - hvplot
   - hxntools >=0.6.1
