--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -16,7 +16,7 @@ dependencies:
   - attrs >=18.0
   - awkward
   - black
-  - bluesky ==1.10.0
+  - bluesky >=1.12.0
   - bluesky-adaptive >=0.3.1
   - bluesky-kafka >=0.10.0
   - bluesky-live >=0.0.8
@@ -38,7 +38,7 @@ dependencies:
   - dask-jobqueue
   - dask-ml
   - dask-xgboost
-  - databroker >=2.0.0b36
+  - databroker >=2.0.0b38
   - dictdiffer
   - discorpy
   - distributed
@@ -154,7 +154,7 @@ dependencies:
   - suitcase-tiff >=0.4.0
   - suitcase-utils
   - sympy
-  - tiled >=0.1.0a114
+  - tiled >=0.1.0a116
   - toml
   - tomopy >=1.12.2
   - tornado
@@ -182,7 +182,7 @@ dependencies:
   #            Dependencies from the `nsls2-collection` metapackage           #
   #                                                                           #
   #***************************************************************************#
-  - bloptools >=0.3.0
+  - bloptools >=0.6.1
   - bluesky-darkframes >=0.6.0
   - caproto
   - emojis
