Comment out `pipx` for py311

--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -173,7 +173,7 @@ dependencies:
   - sirepo-bluesky >=0.6.2
   - xrt
   - zict <3.0.0
-  - pipx
+  # - pipx
   - pip:
     - mimesis
     - pyhyperscattering[all]
