--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -56,7 +56,7 @@ dependencies:
   - h5py !=3.4
   - hdf5-external-filter-plugins-bitshuffle
   - hdf5-external-filter-plugins-lz4
-  - hextools >=0.1.1
+  - hextools >=0.1.3
   - historydict
   - hvplot
   - hxntools >=0.6.1
@@ -86,7 +86,7 @@ dependencies:
   - napari >=0.4.17
   - natsort
   - netcdf4
-  - nexpy >=0.14.8
+  - nexpy >=1.0.7
   - nodejs
   - nsls2-detector-handlers >=0.0.3
   - nslsii >=0.9.1
@@ -132,6 +132,7 @@ dependencies:
   - pyzbar
   - qt >=5.15.0
   - redis-dict
+  - redis-json-dict
   - redis-py
   - reportlab
   - requests
