--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -63,6 +63,7 @@ dependencies:
   - imageio
   - inflection
   - ipyaggrid
+  - ipydatagrid
   - ipykernel
   - ipympl >=0.1.1
   - ipython >=7.20.0
