--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -61,7 +61,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           mamba-version: "*"
           channels: conda-forge
-          channel-priority: true
+          channel-priority: strict
           activate-environment: packaging
           environment-file: envs/env-py${{ env.PYTHONVER }}.yml
 
