--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -19,7 +19,7 @@ jobs:
 
     defaults:
       run:
-        shell: bash -l {0}
+        shell: bash -lvxeo pipefail {0}
 
     steps:
       - name: Checkout the code
@@ -59,7 +59,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ matrix.python-version }}
-          mamba-version: "*"
+          # mamba-version: "*"
           channels: conda-forge
           channel-priority: strict
           activate-environment: packaging
