--- a/envs/env-py311.yml
+++ b/envs/env-py311.yml
@@ -16,6 +16,7 @@ dependencies:
   - attrs >=18.0
   - awkward
   - black
+  - blosc-hdf5-plugin
   - bluesky-adaptive >=0.3.1
   - bluesky-kafka >=0.10.0
   - bluesky-live >=0.0.8
@@ -54,8 +55,7 @@ dependencies:
   - graphviz
   - grid-strategy
   - h5py !=3.4
-  - hdf5-external-filter-plugins-bitshuffle
-  - hdf5-external-filter-plugins-lz4
+  - hdf5-external-filter-plugins
   - hextools >=0.1.3
   - historydict
   - hvplot
