--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -2,6 +2,12 @@ name: 2024-2.0-py310-tiled
 channels:
   - conda-forge
 dependencies:
+  # Loose dependencies:
+  - analysisstore >=0.0.6
+  - blosc-hdf5-plugin
+  - conftrak >=0.0.9
+  - hdf5-external-filter-plugins
+  # Dependencies with exact pins:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
   - _py-xgboost-mutex=2.0=cpu_0
