--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -1,12 +1,25 @@
-name: 2024-2.0-py310-tiled
+name: 2024-2.1-py310-tiled
 channels:
   - conda-forge
 dependencies:
   # Loose dependencies:
   - analysisstore >=0.0.6
+  - bloptools >=0.7.0
   - blosc-hdf5-plugin
   - conftrak >=0.0.9
+  - dask >=2023.9.0
+  - databroker >=2.0.0b45
+  - diffpy.pdffit2
+  - diffpy.structure
   - hdf5-external-filter-plugins
+  - maggma >=0.66
+  - mp-api >=0.41.2
+  - pyfai >=2024.5.0
+  - pymatgen >=2024.5.1
+  - pyobjcryst
+  - pyxrf >=1.0.28
+  - tiled >=0.1.0b4
+  - zict
   # Dependencies with exact pins:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
@@ -89,9 +102,7 @@ dependencies:
   - black=24.4.2=py310hff52083_0
   - bleach=6.1.0=pyhd8ed1ab_0
   - blinker=1.8.1=pyhd8ed1ab_0
-  - bloptools=0.6.1=pyhd8ed1ab_0
   - blosc=1.21.5=h0f2a231_0
-  - bluesky=1.13.0a3=pyha770c72_0
   - bluesky-adaptive=0.3.1=pyhd8ed1ab_0
   - bluesky-base=1.13.0a3=pyhd8ed1ab_0
   - bluesky-darkframes=0.6.0=pyhd8ed1ab_0
@@ -164,14 +175,11 @@ dependencies:
   - cytoolz=0.12.3=py310h2372a71_0
   - dash=2.16.1=pyhd8ed1ab_0
   - dash-bootstrap-components=1.6.0=pyhd8ed1ab_0
-  - dask=2023.8.1=pyhd8ed1ab_0
-  - dask-core=2023.8.1=pyhd8ed1ab_0
   - dask-glm=0.3.2=pyhd8ed1ab_0
   - dask-image=2023.8.1=pyhd8ed1ab_0
   - dask-jobqueue=0.8.5=pyhd8ed1ab_0
   - dask-ml=2024.3.20=pyhd8ed1ab_0
   - dask-xgboost=0.1.11=pyh9f0ad1d_0
-  - databroker=2.0.0b40=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
   - dateparser=1.2.0=pyhd8ed1ab_0
   - dav1d=1.2.1=hd590300_0
@@ -487,7 +495,6 @@ dependencies:
   - lz4=4.3.3=py310h350c4a5_0
   - lz4-c=1.9.4=hcb278e6_0
   - lzo=2.10=hd590300_1001
-  - maggma=0.46.1=pyhd8ed1ab_0
   - magicgui=0.8.2=pyhd8ed1ab_1
   - mako=1.3.3=pyhd8ed1ab_0
   - manhole=1.8.0=pyhd8ed1ab_4
@@ -514,7 +521,6 @@ dependencies:
   - mongoquery=1.4.2=pyhd8ed1ab_0
   - monty=2024.4.17=pyhd8ed1ab_0
   - more-itertools=10.2.0=pyhd8ed1ab_0
-  - mp-api=0.37.2=pyhd8ed1ab_0
   - mpc=1.3.1=hfe3b2da_0
   - mpfr=4.2.1=h9458935_1
   - mpg123=1.32.6=h59595ed_0
@@ -683,8 +689,6 @@ dependencies:
   - pyepics=3.5.2=py310hff52083_2
   - pyerfa=2.0.1.4=py310h1f7b6fc_0
   - pyface=8.0.0=pyhd8ed1ab_0
-  - pyfai=2024.2.0=hd8ed1ab_1
-  - pyfai-base=2024.2.0=py310hcc13569_1
   - pyfftw=0.13.1=py310h0a54255_0
   - pyfiglet=0.8.post1=py_0
   - pyflakes=3.2.0=pyhd8ed1ab_0
@@ -694,7 +698,6 @@ dependencies:
   - pyinstrument=4.6.2=py310h2372a71_0
   - pyjwt=2.8.0=pyhd8ed1ab_1
   - pylatexenc=2.10=pyhd8ed1ab_0
-  - pymatgen=2024.4.13=py310h1f7b6fc_0
   - pymca=5.9.1=py310h1f7b6fc_1
   - pymcr=0.5.1=pyhd8ed1ab_0
   - pymongo=4.6.3=py310hc6cd4ac_0
@@ -752,7 +755,6 @@ dependencies:
   - pywavelets=1.4.1=py310h1f7b6fc_1
   - pywin32-on-windows=0.1.0=pyh1179c8e_3
   - pyxdameraulevenshtein=1.7.1=py310h1f7b6fc_2
-  - pyxrf=1.0.27=pyhd8ed1ab_0
   - pyyaml=6.0.1=py310h2372a71_1
   - pyzbar=0.1.9=pyhd8ed1ab_0
   - pyzenodo3=1.0.2=py_0
@@ -878,11 +880,6 @@ dependencies:
   - tfs-pandas=3.7.3=pyhd8ed1ab_0
   - threadpoolctl=3.5.0=pyhc1e730c_0
   - tifffile=2024.4.18=pyhd8ed1ab_0
-  - tiled=0.1.0a120=hd8ed1ab_0
-  - tiled-base=0.1.0a120=pyhd8ed1ab_0
-  - tiled-client=0.1.0a120=hd8ed1ab_0
-  - tiled-formats=0.1.0a120=hd8ed1ab_0
-  - tiled-server=0.1.0a120=hd8ed1ab_0
   - tiledb=2.16.3=hf0b6e87_3
   - tinycss2=1.3.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
@@ -1008,13 +1005,13 @@ dependencies:
   - zbar=0.10=h4530518_1001
   - zeromq=4.3.5=h59595ed_1
   - zfp=1.0.1=h59595ed_0
-  - zict=2.2.0=pyhd8ed1ab_0
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hd590300_5
   - zlib-ng=2.0.7=h0b41bf4_0
   - zstandard=0.22.0=py310h1275a96_0
   - zstd=1.5.5=hfc55251_0
   - pip:
+      - bluesky>=1.13.0a3
       - aioca==1.7
       - aiofiles==22.1.0
       - altair==5.3.0
