--- a/envs/env-py310.yml
+++ b/envs/env-py310.yml
@@ -8,6 +8,7 @@ dependencies:
   - blosc-hdf5-plugin
   - conftrak >=0.0.9
   - dask >=2023.9.0
+  - distributed >=2023.9.0
   - databroker >=2.0.0b45
   - diffpy.pdffit2
   - diffpy.structure
@@ -119,7 +120,7 @@ dependencies:
   - botorch=0.10.0=pyhd8ed1ab_0
   - bottleneck=1.3.8=py310h1f7b6fc_0
   - bqplot=0.12.43=pyhd8ed1ab_0
-  - broh5=1.1.0=pyhd8ed1ab_2
+  # - broh5=1.1.0=pyhd8ed1ab_2
   - brotli=1.0.9=h166bdaf_9
   - brotli-bin=1.0.9=h166bdaf_9
   - brotli-python=1.0.9=py310hd8f1fbe_9
@@ -191,7 +192,6 @@ dependencies:
   - dill=0.3.8=pyhd8ed1ab_0
   - discorpy=1.6.0=pyhd8ed1ab_0
   - distlib=0.3.8=pyhd8ed1ab_0
-  - distributed=2023.8.1=pyhd8ed1ab_0
   - distro=1.9.0=pyhd8ed1ab_0
   - dnspython=2.4.2=pyhd8ed1ab_0
   - docker-py=6.1.3=pyhd8ed1ab_0
@@ -558,7 +558,7 @@ dependencies:
   - networkx=3.3=pyhd8ed1ab_1
   - nexpy=1.0.7=pyhd8ed1ab_0
   - nexusformat=1.0.4=pyhd8ed1ab_0
-  - nicegui=1.4.9=pyhd8ed1ab_0
+  # - nicegui=1.4.9=pyhd8ed1ab_0
   - nlohmann_json=3.11.3=h59595ed_0
   - nng=1.6.0=h59595ed_3
   - nodeenv=1.8.0=pyhd8ed1ab_0
