Need numpy.distutils

--- a/envs/env-py312.yml
+++ b/envs/env-py312.yml
@@ -98,7 +98,7 @@ dependencies:
   - nsls2-detector-handlers >=0.0.3
   - nslsii >=0.9.1
   - numexpr >=2.8.0
-  - numpy >=1.20
+  - numpy >=1.20,<1.25
   - nyxtools >=0.0.12
   - oct2py
   - opencv
